# nplusone

./: README.md  pyproject.toml  setup.py
nplusone/ext/django/: patch.py
tests/testapp/: db.sqlite3  nplusone
tests/testapp/testapp/: admin.py  settings.py  tests.py  urls.py  views.py  wsgi.py
tests/testapp/testmodels/: admin.py  models.py
tests/testapp/testmodels/migrations/: 0001_initial.py  0002_user_name.py
